# DRG-Groupers

./: .gitignore  README.md  requirements.txt
CHS-DRG-1.0/doc/: DRG_9不做区分.xlsx  DRG目录.xlsx  MCC_CC表.xlsx  MDC目录.xlsx  RB1_白血病诊断.xlsx  排除表.xlsx
CHS-DRG-1.1/doc/: ADRG列表.xlsx  MDC主诊表.xlsx  排除表.xlsx
DRG-DIP-Inspector/: drg_audit_detector.py  drg_classifier.py  export.py  requirements.txt  test.py
DRG-DIP-Inspector/doc/: 分组接口.txt  疑点识别器-清单版本入参.docx
DRG-DIP-Inspector/json/: current_requests.json  error_requests.json  requests.json  requests_yes.json  诊断与手术冲突.json
DRG-DIP-Inspector/result/: DRG分组结果.xlsx
drg-chs10-py/: requirements.txt
drg-chs10-py/config/: exclude.json  mcc_cc.json  mdc.json
drg-chs10-py/data/: test_data.json
drg-chs10-py/doc/: ADRG列表.xlsx  ADRG目录.xlsx  MCC_CC表.xlsx  MDC主诊表.xlsx  排除表.xlsx  部位.xlsx
drg-chs10-py/src/: data_classes.py  drg_grouper.py  duplicate_mappings.xlsx  get_rules_data.py  main.py  receive_api_data.py  request.json  rule_check.py  test-api-client.py  test-api-server.py  test-client1.py  test-data-generator.py  test-server.py
drg-chs10-rust/: Cargo.toml
drg-chs10-rust/src/: client.rs  main.rs  server.rs
drg-chs11-py/doc/: ADRG目录.xlsx  CC.xlsx  DRG目录.xlsx  MCC.xlsx
drg-chs20-py/doc/: ADRG列表（65-1156）.xlsx  CHS-DRG-2.0版-入组参数.xlsx
drg-chs20-py/rules/: statistics.json
drg-chs20-py/script/: doctor_rules.py  get_rules.py  pdf_to_img.py  split_pdf.py
drg-chs20-py/src/: convert_to_patient.py  data_classes.py  drg_grouper.py  main.py  receive_api_data.py  rule_check.py
drg-chs20-rust/: Cargo.toml
(+6 files in other folders)
